apps/base/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: linkding
  labels:
    app.kubernetes.io/name: linkding
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 9090
    protocol: TCP
  selector:
    app.kubernetes.io/name: linkding
