apps/base/linkding/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
  namespace: linkding
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`linkding.staging.cruznet.io`)
    kind: Rule
    services:
    - name: linkding
      kind: Service
      namespace: linkding
      port: 9090
